fixed course conflicts